2008-05-03 [colin]	3.4.0cvs22

	* po/de.po
		Fix bug 1598, 'Leading slash while translating "Unsubscribe"'

2008-05-03 [colin]	3.4.0cvs21

	* src/toolbar.c
		Fix bug 1597, 'In news folders, "Move Message to Wastebin" 
		icon isn't grayed although ineffective'

2008-05-02 [wwp]	3.4.0cvs20

	* po/fr.po
		Fix translation.

	* src/prefs_folder_item.c
		Add missing notice in folder properties (templates) when
		folder is a root node.

2008-04-30 [colin]	3.4.0cvs19

	* src/prefs_toolbar.c
		Add Trash and Delete icons to the icon chooser

2008-04-30 [colin]	3.4.0cvs18

	* src/compose.c
		Remove "Delete entire line" which was a noop
		and should be the same as "Delete line" :)

2008-04-30 [colin]	3.4.0cvs17

	* src/compose.c
		Fix 'Delete line' and 'Delete to end of line'
		on the last line. Patch by <seelenhirt@gmx.net>

2008-04-28 [colin]	3.4.0cvs16

	* src/folder.c
		Fix bug 1589, 'tagsdb file not removed when
		folder deleted'.
	* src/common/utils.c
		Make sure claws_unlink accepts NULL arg.

2008-04-25 [colin]	3.4.0cvs15

	* src/common/ssl.c
		Fix/simplify previous commit

2008-04-25 [colin]	3.4.0cvs14

	* src/addrindex.h
	* src/common/ssl_certificate.c
		Patch by Marcus: Fix Win32 build
	* src/common/ssl.c
		Fix build with GnuTLS/no pthread, thanks
		to Marcus

2008-04-25 [colin]	3.4.0cvs13

	* src/summaryview.c
		Fix bug 1586, '3-pane vertical layout now and then 
		still shows sender column'

2008-04-25 [colin]	3.4.0cvs12

	* src/Makefile.am
	* src/w32-logo.ico
	* src/w32-resource.rc
		Patch from Marcus Brinkmann to set an icon on w32.

2008-04-24 [colin]	3.4.0cvs11

	* src/inc.c
	* src/inc.h
		Trace inc locks
	* src/ldif.c
	* src/ldif.h
		Fix bug 1581, 'Bad File Format during Import LDIF':
		Use dynamically allocated buffers; also, allow 
		importing contacts with no email address

2008-04-24 [colin]	3.4.0cvs10

	* src/prefs_common.c
		Increment the timeout a bit on OpenBSD, 75 isn't enough

2008-04-23 [colin]	3.4.0cvs9

	* src/compose.c
	* src/prefs_folder_item.c