@@ -3318,3 +3318,4 @@
 ( cvs diff -u -r 1.42.2.37 -r 1.42.2.38 po/fr.po;  cvs diff -u -r 1.52.2.63 -r 1.52.2.64 src/prefs_folder_item.c;  ) > 3.4.0cvs20.patchset
 ( cvs diff -u -r 1.43.2.96 -r 1.43.2.97 src/toolbar.c;  ) > 3.4.0cvs21.patchset
 ( cvs diff -u -r 1.58.2.38 -r 1.58.2.39 po/de.po;  ) > 3.4.0cvs22.patchset
+( cvs diff -u -r 1.382.2.446 -r 1.382.2.447 src/compose.c;  cvs diff -u -r 1.204.2.167 -r 1.204.2.168 src/prefs_common.c;  ) > 3.4.0cvs23.patchset
